--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nativescript-google-maps-sdk": "^2.1.3",
     "nativescript-plugin-firebase": "^3.12.0",
     "nativescript-social-share": "^1.3.2",
+    "nativescript-telerik-ui-pro": "^2.0.1",
     "nativescript-theme-core": "~1.0.2",
     "reflect-metadata": "~0.1.8",
     "rxjs": "~5.3.0",
